--- a/requirements.txt
+++ b/requirements.txt
@@ -1,221 +1,36 @@
-alabaster==0.7.10
-anaconda-client==1.6.5
-anaconda-navigator==1.6.9
-anaconda-project==0.8.0
-asn1crypto==0.22.0
-astroid==1.5.3
-astropy==2.0.2
-attrs==18.1.0
-Automat==0.7.0
-awsebcli==3.14.4
-babel==2.5.0
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.6.0
-bitarray==0.8.1
-bkcharts==0.2
-blaze==0.11.3
-bleach==2.0.0
-bokeh==0.12.10
-boto==2.48.0
-botocore==1.10.83
-Bottleneck==1.2.1
-bottlenose==1.1.7
-CacheControl==0.12.3
-cement==2.8.2
-certifi==2017.7.27.1
-cffi==1.10.0
+certifi==2018.4.16
 chardet==3.0.4
 click==6.7
-cloudpickle==0.4.0
-clyent==1.2.2
-colorama==0.3.9
-comtypes==1.1.2
-conda==4.3.30
-conda-build==3.0.27
-conda-verify==2.0.0
-constantly==15.1.0
-contextlib2==0.5.5
-cryptography==2.0.3
-cycler==0.10.0
-Cython==0.26.1
-cytoolz==0.8.2
 dash==0.22.0
 dash-core-components==0.26.0
 dash-html-components==0.11.0
 dash-renderer==0.13.0
-dash-table-experiments==0.6.0
-dask==0.15.3
-datashape==0.5.4
-decorator==4.1.2
-distlib==0.2.5
-distributed==1.19.1
-Django==2.0
+decorator==4.3.0
 docutils==0.14
-entrypoints==0.2.3
-et-xmlfile==1.0.1
-fastcache==1.0.2
-fbprophet==0.3.post2
-filelock==2.0.12
-Flask==0.12.2
+Flask==1.0.2
 Flask-Compress==1.4.0
-Flask-Cors==3.0.3
-gevent==1.2.2
-glob2==0.5
-greenlet==0.4.12
-h5py==2.7.0
-heapdict==1.0.0
-html5lib==0.999999999
-hupper==1.3
-hyperlink==18.0.0
-idna==2.6
-imageio==2.2.0
-imagesize==0.7.1
-incremental==17.5.0
-ipykernel==4.6.1
-ipython==6.1.0
+idna==2.7
 ipython-genutils==0.2.0
-ipywidgets==7.0.0
-isbnlib==3.7.2
-isbntools==4.3.7
-isort==4.2.15
 itsdangerous==0.24
-jdcal==1.3
-jedi==0.10.2
-Jinja2==2.9.6
-jmespath==0.9.3
+Jinja2==2.10
 jsonschema==2.6.0
-jupyter-client==5.1.0
-jupyter-console==5.2.0
-jupyter-core==4.3.0
-jupyterlab==0.27.0
-jupyterlab-launcher==0.4.0
+jupyter-core==4.4.0
 Kivy==1.10.1
 Kivy-Garden==0.1.4
-lazy-object-proxy==1.3.1
-llvmlite==0.20.0
-locket==0.2.0
-lockfile==0.12.2
-lxml==4.1.0
+kivy.deps.glew==0.1.10
+kivy.deps.sdl2==0.1.18
 MarkupSafe==1.0
-matplotlib==2.1.0
-mccabe==0.6.1
-menuinst==1.4.10
-mistune==0.7.4
-mpmath==0.19
-msgpack-python==0.4.8
-multipledispatch==0.4.9
-navigator-updater==0.1.0
-nbconvert==5.3.1
 nbformat==4.4.0
-networkx==2.0
-nltk==3.2.4
-nose==1.3.7
-notebook==5.0.0
-numba==0.35.0+10.g143f70e
-numexpr==2.6.2
-numpy==1.13.3
-numpydoc==0.7.0
-odo==0.5.1
-olefile==0.44
-openpyxl==2.4.8
-packaging==16.8
-pandas==0.23.4
-pandocfilters==1.4.2
-partd==0.3.8
-PasteDeploy==1.5.2
-path.py==10.3.1
-pathlib2==2.3.0
-pathspec==0.5.5
-patsy==0.4.1
-pep8==1.7.0
-pickleshare==0.7.4
-Pillow==4.2.1
-pkginfo==1.4.1
-plaster==1.0
-plaster-pastedeploy==0.6
+Pillow==5.2.0
 plotly==3.1.0
-ply==3.10
-progress==1.3
-prompt-toolkit==1.0.15
-psutil==5.4.0
-py==1.4.34
-pycodestyle==2.3.1
-pycosat==0.6.2
-pycparser==2.18
-pycrypto==2.6.1
-pycurl==7.43.0
-pyflakes==1.6.0
+pygame==1.9.4
 Pygments==2.2.0
-PyHamcrest==1.9.0
-pylint==1.7.4
-pyodbc==4.0.17
-pyOpenSSL==17.2.0
-pyparsing==2.2.0
-pyramid==1.9.2
-pyramid-arima==0.7.1
-PySocks==1.6.7
-pystan==2.17.1.0
-pytest==3.2.1
-python-amazon-simple-product-api==2.2.11
-python-dateutil==2.6.1
-pytz==2017.2
-PyWavelets==0.5.2
-pywin32==221
-PyYAML==3.12
-pyzmq==16.0.2
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.3.1
-repoze.lru==0.7
-requests==2.18.4
+pypiwin32==223
+pytz==2018.5
+pywin32==223
+requests==2.19.1
 retrying==1.3.3
-rope==0.10.5
-ruamel-yaml==0.11.14
-scikit-image==0.13.0
-scikit-learn==0.19.1
-scipy==0.19.1
-seaborn==0.8
-semantic-version==2.5.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
 six==1.11.0
-snowballstemmer==1.2.1
-sortedcollections==0.5.3
-sortedcontainers==1.5.7
-Sphinx==1.6.3
-sphinxcontrib-websupport==1.0.1
-spyder==3.2.4
-SQLAlchemy==1.1.13
-ssh==1.8.0
-statsmodels==0.9.0
-sympy==1.1.1
-tables==3.4.2
-tabulate==0.7.5
-tblib==1.3.2
-termcolor==1.1.0
-testpath==0.3.1
-toolz==0.8.2
-tornado==4.5.2
 traitlets==4.3.2
-translationstring==1.3
-Twisted==18.7.0
-typing==3.6.2
-unicodecsv==0.14.1
-urllib3==1.22
-venusian==1.1.0
-wcwidth==0.1.7
-webencodings==0.5.1
-WebOb==1.8.2
-Werkzeug==0.12.2
-widgetsnbextension==3.0.2
-win-inet-pton==1.0.1
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.10.11
-xlrd==1.1.0
-XlsxWriter==1.0.2
-xlwings==0.11.4
-xlwt==1.3.0
-zict==0.1.3
-zope.deprecation==4.3.0
-zope.interface==4.5.0
+urllib3==1.23
+Werkzeug==0.14.1
