--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,38 @@
-algoliasearch==1.15.3
-certifi==2018.4.16
+certifi==2018.8.24
 chardet==3.0.4
 click==6.7
-configparser==3.5.0
-dash==0.26.3
-dash-auth==1.0.0
-dash-core-components==0.28.0
-dash-dangerously-set-inner-html==0.0.1
-dash-html-components==0.12.0
-dash-renderer==0.13.1
+Cython==0.28.5
+dash==0.27.0
+dash-core-components==0.30.2
+dash-html-components==0.13.2
+dash-renderer==0.14.1
 dash-table-experiments==0.6.0
 decorator==4.3.0
-enum34==1.1.6
-fbprophet
-flake8==3.5.0
-Flask==1.0
-Flask-Caching==1.4.0
+Flask==1.0.2
 Flask-Compress==1.4.0
-Flask-Cors==3.0.3
-Flask-SeaSurf==0.2.2
-greenlet==0.4.13
-gunicorn==19.8.0
-idna==2.6
+gunicorn==19.9.0
+idna==2.7
 ipython-genutils==0.2.0
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
 jupyter-core==4.4.0
-lxml==4.2.1
 MarkupSafe==1.0
-mccabe==0.6.1
 nbformat==4.4.0
-numpy
-pandas
-pandas-datareader
-percy
-plotly==3.1.1
-pycodestyle==2.3.1
-pyflakes==1.6.0
-pyorbital==1.3.1
-python-dateutil==2.7.2
-pytz==2018.4
-redis==2.10.6
-requests==2.18.4
-requests-file==1.4.3
-requests-ftp==0.3.1
+numpy==1.15.2
+pandas==0.23.4
+patsy==0.5.0
+plotly==3.2.1
+python-dateutil==2.7.3
+pytz==2018.5
+requests==2.19.1
 retrying==1.3.3
-selenium==3.11.0
+scipy==1.1.0
 six==1.11.0
+statsmodels==0.9.0
 traitlets==4.3.2
-urllib3==1.22
+urllib3==1.23
 Werkzeug==0.14.1
-wrapt==1.10.11
 Cython>=0.22
 pystan>=2.14
 numpy>=1.10.0
@@ -60,3 +41,4 @@ matplotlib>=2.0.0
 lunardate>=0.1.5
 convertdate>=2.1.2
 holidays>=0.9.5
+fbprophet
