--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ decorator==4.3.0
 Flask==1.0.2
 Flask-Compress==1.4.0
 gunicorn==19.9.0
+hupper==1.3
 idna==2.7
 ipython-genutils==0.2.0
 itsdangerous==0.24
@@ -21,21 +22,25 @@ MarkupSafe==1.0
 nbformat==4.4.0
 numpy==1.15.2
 pandas==0.23.4
+PasteDeploy==1.5.2
 patsy==0.5.0
+plaster==1.0
+plaster-pastedeploy==0.6
 plotly==3.2.1
+pyramid==1.9.2
 python-dateutil==2.7.3
 pytz==2018.5
+repoze.lru==0.7
 requests==2.19.1
 retrying==1.3.3
 scipy==1.1.0
 six==1.11.0
 statsmodels==0.9.0
 traitlets==4.3.2
+translationstring==1.3
 urllib3==1.23
+venusian==1.1.0
+WebOb==1.8.2
 Werkzeug==0.14.1
-pystan>=2.14
-lunardate>=0.1.5
-convertdate>=2.1.2
-holidays>=0.9.5
-fbprophet
-pyramid
+zope.deprecation==4.3.0
+zope.interface==4.5.0
